Change names of video games and streaming images

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <h3 class="heading-tertiary margin-bottom-sm">What media do I consume?</h3>
           <div class="vis-container">
             <figure class="vis">
-              <img src="imgs/good-vis-example.png" alt="Steam price history visualization">
+              <img src="imgs/video-games-image.png" alt="Steam price history visualization">
               <h4 class="text-overlay heading-quaternary">Video Games</h4>
             </figure>
             <div class="lists">
@@ -81,7 +81,7 @@
         <article class="question-answer">
           <div class="vis-container">
             <figure class="vis">
-              <img src="imgs/bad-vis-example.png" alt="Steam price history visualization">
+              <img src="imgs/streaming-image.png" alt="Steam price history visualization">
               <h4 class="text-overlay heading-quaternary">Streaming</h4>
             </figure>
             <div class="lists">
