Change Alt descriptions for images

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <h3 class="heading-tertiary margin-bottom-sm">What media do I consume?</h3>
           <div class="vis-container">
             <figure class="vis">
-              <img src="imgs/video-games-image.png" alt="Steam price history visualization">
+              <img src="imgs/video-games-image.png" alt="Video games image BG">
               <h4 class="text-overlay heading-quaternary">Video Games</h4>
             </figure>
             <div class="lists">
@@ -81,7 +81,7 @@
         <article class="question-answer">
           <div class="vis-container">
             <figure class="vis">
-              <img src="imgs/streaming-image.png" alt="Steam price history visualization">
+              <img src="imgs/streaming-image.png" alt="Streaming image BG">
               <h4 class="text-overlay heading-quaternary">Streaming</h4>
             </figure>
             <div class="lists">
@@ -108,7 +108,7 @@
         <article class="question-answer">
           <div class="vis-container">
             <figure class="vis">
-              <img src="imgs/music-image.jpg" alt="Steam price history visualization">
+              <img src="imgs/music-image.jpg" alt="Music image BG">
               <h4 class="text-overlay heading-quaternary">Music</h4>
             </figure>
             <div class="lists">
@@ -138,7 +138,7 @@
         <article class="question-answer">
           <div class="vis-container">
             <figure class="vis">
-              <img src="imgs/creative-image.jpg" alt="Steam price history visualization">
+              <img src="imgs/creative-image.jpg" alt="Creative image BG">
               <h4 class="text-overlay heading-quaternary">Creative</h4>
             </figure>
             <div class="lists">
@@ -155,7 +155,7 @@
         <article class="question-answer">
           <div class="vis-container">
             <figure class="vis">
-              <img src="imgs/telecom-image.jpg" alt="Steam price history visualization">
+              <img src="imgs/telecom-image.jpg" alt="Telecom image BG">
               <h4 class="text-overlay heading-quaternary">Telecommunication</h4>
             </figure>
             <div class="lists">
