Fix typo in intro

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <article class="question-answer">
           <h3 class="heading-tertiary margin-bottom-sm">Why am I in this class?</h3>
           <p class="answers-paragraph">
-            The class just seems interesting and discusses subject matter that I'm already involved in in&mdash;as a
+            The class just seems interesting and discusses subject matter that I'm already involved in&mdash;as a
             Computer Science major with minors in both Art (New Media track) and Game Design & Development, I like
             learning theories and facts about the intersection between technology and the humanities.
           </p>
