Add GroupMe to Telecommunication list

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                 <li class="media-list__item"><span>WhatsApp</span></li>
                 <li class="media-list__item"><span>Gmail</span></li>
                 <li class="media-list__item"><span>Slack</span></li>
+                <li class="media-list__item"><span>GroupMe</span></li>
               </ul>
             </div>
           </div>
