Add PS4 to list

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
               <ul class="media-list media-list--platform">
                 <li class="media-list__item"><span>Steam</span></li>
                 <li class="media-list__item"><span>Switch</span></li>
+                <li class="media-list__item"><span>PS4</span></li>
                 <li class="media-list__item"><span>Newgrounds</span></li>
               </ul>
 
