Complete assignment 2 and make various style changes)

--- a/index.html
+++ b/index.html
@@ -178,7 +178,10 @@
     <section class="section-works" id="section-works">
       <h2 class="heading-secondary margin-bottom-md">Works</h2>
       <div class="container">
-        <p>Nothing yet :)</p>
+        <ul class="assignments-list">
+          <li class="assignments-list__item"><a href="index.html#section-answers">Assignment 1 (Media Consumption)</a></li>
+          <li class="assignments-list__item"><a href="assignment-2.html">Assignment 2 (Common Interests)</a></li>
+        </ul>
       </div>
 
     </section>
