Add InDesign to list of Creative media

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
               <ul class="media-list media-list--platform">
                 <li class="media-list__item"><span>Adobe Illustrator</span></li>
                 <li class="media-list__item"><span>Adobe Photoshop</span></li>
+                <li class="media-list__item"><span>Adobe InDesign</span></li>
                 <li class="media-list__item"><span>Clip Studio Paint</span></li>
                 <li class="media-list__item"><span>FL Studio</span></li>
               </ul>
